--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<ul>
 			<li> <a href="#">Descripcion</a> </li>
 			<li> <a href="#">Paquetes</a> </li>
+			<li> <a href="#">Graderias</a> </li>
 			<li> <a href="#">Contactanos</a> </li>
 		</ul>
 	</nav>
@@ -45,6 +46,15 @@
 			</figure>
 			<h4>
 				<a href="#">Estudiantil</a>
+			</h4>
+		</article>
+	</section>
+	<section>
+		<article>
+			<figure>
+			</figure>
+			<h4>
+				<a href="#">Graderias</a>
 			</h4>
 		</article>
 	</section>
